--- a/views/about.ejs
+++ b/views/about.ejs
@@ -54,17 +54,15 @@
                             </a> -->
                         </div>
                     </div>
-                    <div class="popupvideo-wrap">
+                    <div class="popupvideo-wrap" style="padding-top: 30px !important;">
                         <h4 class="title">
                             Who we are </h4>
-                        <p class="desc">We believe in a world where you have total freedom to be you, without judgement.
-                            To experiment. To express yourself. To be brave and grab life as the extraordinary adventure
-                            it is. So we make sure everyone has an equal chance to discover all the amazing things
-                            they’re capable of – no matter who they are, where they’re from or what looks they like to
-                            boss.</p>
-                        <p>Our audience (AKA you) is wonderfully unique. And we do everything we can to help you find
-                            your fit, offering our Ciloe Brands in more than 30 sizes – and we’re committed to providing
-                            all sizes at the same price</p>
+                        <p class="desc">MyssticbyArzoo has been importing and selling Crystals and Crystal jewellery creating since 2020.
+                            Driven by her passion for helping others, founder and CEO Arzoo Upadhyay began her spiritual journey a few years ago that awakened a deep reverence for cross-cultural and spiritual traditions. As she enriched her understanding of these sacred practices, she started working with crystals and as she grew spiritually and got rid of her issues likes severe anxiety issues and sleeplessness. Arzoo wanted Crystal healing to reach each and every household, everywhere, with the intention of healing others for what kind of energies they wish to attract in their lives.
+                            </p>
+                        <p>At MyssticbyArzoo, we make sure every person who comes across the brand gains knowledge about what spiritual work is, how they can grow spiritually and especially how to choose and work with crystal to find their life/spiritual path. We import most of our Crystals from the mine source around 10-12 countries. 
+                            Today, MyssticbyArzoo crafts pieces using sacred and meaningful symbols and semi-precious gemstones renowned for their healing properties. In sterling silver, 14K gold plate and 18kt gold plate, each MyssticbyArzoo design is created to bring joy to its wearer.
+                            </p>
                     </div>
                 </div>
             </div>
