--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from ledthanhdat.vn/html/kaycee/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Aug 2023 18:14:42 GMT -->
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,27 +39,20 @@
     </div>
 </div>
 <div class="site-main main-container no-sidebar">
-    <div class="section-041">
-        <div class="container">
-            <div class="google-map">
-                <iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=university%20of%20san%20francisco&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-            </div>
-        </div>
-    </div>
+    
     <div class="section-042">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 offset-xl-1 col-xl-10 col-lg-12">
                     <div class="row">
                         <div class="col-md-6">
-                            <h4 class="az_custom_heading">WP SHOP THEME</h4>
-                            <p>3100 West Cary Street Richmond, Virginia 23221<br>
-                                P: 804.355.4383 F: 804.367.7901</p>
-                            <h4 class="az_custom_heading">Store Hours</h4>
-                            <p>Monday-Saturday 11am-7pm ET<br>
-                                Sunday 11am-6pm ET</p>
-                            <h4 class="az_custom_heading">Specialist Hours</h4>
-                            <p>Monday-Friday 9am-5pm ET</p>
+                            
+                            <h4 class="az_custom_heading">Follow Us On</h4>
+                            <p>Instagram: <br> @MyssticbyArzoo
+                            <p>X<br> @MyssticbyArzoo
+                                </p>
+                            <h4 class="az_custom_heading">Email Us On</h4>
+                            <p>MyssticbyArzoo@gmail.com</p>
                         </div>
                         <div class="col-md-6">
                             <div role="form" class="wpcf7">
