--- a/views/dashboard/nav.ejs
+++ b/views/dashboard/nav.ejs
@@ -34,7 +34,30 @@
           <span class="hide-menu">Add Others</span>
         </a>
       </li>
-      
+      <li class="sidebar-item">
+        <a class="sidebar-link" href="/dashboard/statistics" aria-expanded="false">
+          <span>
+            <i class="ti ti-aperture"></i>
+          </span>
+          <span class="hide-menu">Statistics</span>
+        </a>
+      </li>
+      <li class="sidebar-item">
+        <a class="sidebar-link" href="/dashboard/social-media" aria-expanded="false">
+          <span>
+            <i class="ti ti-aperture"></i>
+          </span>
+          <span class="hide-menu">Social Media</span>
+        </a>
+      </li>
+      <li class="sidebar-item">
+        <a class="sidebar-link" href="/dashboard/newsletters" aria-expanded="false">
+          <span>
+            <i class="ti ti-aperture"></i>
+          </span>
+          <span class="hide-menu">News Letters</span>
+        </a>
+      </li>
     </ul>
    
   </nav>
