--- a/views/dashboard/add-jewellery.ejs
+++ b/views/dashboard/add-jewellery.ejs
@@ -58,8 +58,8 @@
                 <img src="/assets/dashboard/dist/images/profile/user-1.jpg" class="rounded-circle" width="40" height="40" alt="">
               </div>
               <div class="john-title">
-                <h6 class="mb-0 fs-4 fw-semibold">Mathew</h6>
-                <span class="fs-2 text-dark">Designer</span>
+                <h6 class="mb-0 fs-4 fw-semibold"><%= user.name %></h6>
+                <span class="fs-2 text-dark">Jewellery Designer</span>
               </div>
               <button class="border-0 bg-transparent text-primary ms-auto" tabindex="0" type="button" aria-label="logout" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="logout">
                 <i class="ti ti-power fs-6"></i>
@@ -77,39 +77,7 @@
         <%- include('header') %>
         <!-- Header End -->
         <div class="container-fluid">
-          <div class="row">
-            <div class="col-lg-8 d-flex align-items-stretch">
-              <div class="card w-100 bg-light-info overflow-hidden shadow-none">
-                <div class="card-body position-relative">
-                  <div class="row">
-                    <div class="col-sm-7">
-                      <div class="d-flex align-items-center mb-7">
-                        <div class="rounded-circle overflow-hidden me-6">
-                          <img src="/assets/dashboard/dist/images/profile/user-1.jpg" alt="" width="40" height="40">
-                        </div>
-                        <h5 class="fw-semibold mb-0 fs-5">Welcome back Mathew Anderson!</h5>
-                      </div>
-                      <div class="d-flex align-items-center">
-                        <div class="border-end pe-4 border-muted border-opacity-10">
-                          <h3 class="mb-1 fw-semibold fs-8 d-flex align-content-center">$2,340<i class="ti ti-arrow-up-right fs-5 lh-base text-success"></i></h3>
-                          <p class="mb-0 text-dark">Today’s Sales</p>
-                        </div>
-                        <div class="ps-4">
-                          <h3 class="mb-1 fw-semibold fs-8 d-flex align-content-center">35%<i class="ti ti-arrow-up-right fs-5 lh-base text-success"></i></h3>
-                          <p class="mb-0 text-dark">Overall Performance</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-5">
-                      <div class="welcome-bg-img mb-n7 text-end">
-                        <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/dist/images/backgrounds/welcome-bg.svg" alt="" class="img-fluid">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-           
+          <%- include('banner') %> 
             <div class="row">
                 <div class="col-12">
                     <div class="row">
@@ -118,7 +86,7 @@
                           <div class="card">
                             <div class="card-body">
                               <h5 class="mb-3">Add Products</h5>
-                              <form class="jewellery-form">
+                              <form class="jewellery-form" enctype="multipart/form-data">
                                 <div class="alert alert-success alert-dismissible bg-success text-white border-0 fade show hidden" role="alert">
                                   <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
                                   <strong>Success - </strong> Product Added
@@ -238,9 +206,10 @@
                                     <div >
                                       <div class="form-group mb-4">
                                         <label for="exampleFormControlSelect1">Upload Images</label>
-                                        <input class="form-control" name="files" type="file" id="formFile" multiple>
+                                        <!-- <input class="form-control" name="files" type="file" id="formFile" multiple> -->
+                                        <textarea name="images" class="form-control" rows="3"></textarea>
+                                        <small id="name" class="badge badge-default text-info font-medium bg-light-info form-text">Seperate links by ,</small>
 
-                                        
                                     </div>
                                     
                                     </div>
@@ -271,7 +240,7 @@
           </div>
         </div>
         <!-- container-fluid over -->
-      </div>
+      
     </div>
     <!--  Shopping Cart -->
     <div class="offcanvas offcanvas-end shopping-cart" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
@@ -835,11 +804,15 @@ form.onsubmit = function() {
       
               // Serialize form data
               const formData = form.serialize();
-      
+              // const form = $('.jewellery-form')[0]; // Convert jQuery object to plain JavaScript
+              // const formData = new FormData(form);
+              console.log(formData)
               $.ajax({
                   type: 'POST',
                   url: '/api/add-jewellery',
                   data: formData,
+                
+                  
                   success: function (data) {
                     // console.log(data)
                     
@@ -859,7 +832,8 @@ form.onsubmit = function() {
                       console.error('Error:', error);
                   }
               });
-          });
+          
+            });
       });
       </script>
   </body>
