--- a/views/dashboard/header.ejs
+++ b/views/dashboard/header.ejs
@@ -31,7 +31,7 @@
           </a>
           <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-center">
             
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
               <a class="nav-link nav-icon-hover" href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="ti ti-bell-ringing"></i>
                 <div class="notification bg-primary rounded-circle"></div>
@@ -101,7 +101,7 @@
                   <button class="btn btn-outline-primary w-100"> See All Notifications </button>
                 </div>
               </div>
-            </li>
+            </li> -->
             <li class="nav-item dropdown">
               <a class="nav-link pe-0" href="javascript:void(0)" id="drop1" data-bs-toggle="dropdown" aria-expanded="false">
                 <div class="d-flex align-items-center">
@@ -118,15 +118,15 @@
                   <div class="d-flex align-items-center py-9 mx-7 border-bottom">
                     <img src="/assets/dashboard/dist/images/profile/user-1.jpg" class="rounded-circle" width="80" height="80" alt="" />
                     <div class="ms-3">
-                      <h5 class="mb-1 fs-3">Mathew Anderson</h5>
-                      <span class="mb-1 d-block text-dark">Designer</span>
+                      <h5 class="mb-1 fs-3"><%= user.name %></h5>
+                      <span class="mb-1 d-block text-dark">Jewellery Designer</span>
                       <p class="mb-0 d-flex text-dark align-items-center gap-2">
-                        <i class="ti ti-mail fs-4"></i> info@modernize.com
+                        <i class="ti ti-mail fs-4"></i> arzooupadhyay21@icloud.com
                       </p>
                     </div>
                   </div>
                   <div class="message-body">
-                    <a href="page-user-profile.html" class="py-8 px-7 mt-8 d-flex align-items-center">
+                    <!-- <a href="page-user-profile.html" class="py-8 px-7 mt-8 d-flex align-items-center">
                       <span class="d-flex align-items-center justify-content-center bg-light rounded-1 p-6">
                         <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/dist/images/svgs/icon-account.svg" alt="" width="24" height="24">
                       </span>
@@ -152,7 +152,7 @@
                         <h6 class="mb-1 bg-hover-primary fw-semibold">My Task</h6>
                         <span class="d-block text-dark">To-do and Daily Tasks</span>
                       </div>
-                    </a>
+                    </a> -->
                     <div class="d-grid py-4 px-7 pt-8">
                         <a href="/api/logout" class="btn btn-outline-primary">Log Out</a>
 
