--- a/views/error.ejs
+++ b/views/error.ejs
@@ -23,17 +23,15 @@
     <title>Error</title>
 </head>
 <body>
-<%- include('header') %>
 <div class="main-container text-center error-404 not-found">
     <div class="container">
-        <h1 class="title-404">404</h1>
-        <h1 class="title">Opps! This page Could Not Be Found!</h1>
+        <h1 class="title-404"><%= status %></h1>
+        <h1 class="title"><%= message %></h1>
         <p class="subtitle">Sorry bit the page you are looking for does not exist, have been removed or name changed</p>
         <!-- .page-content -->
         <a href="/" class="button">Back to hompage</a>
     </div>
 </div>
-<%- include('footer') %>
 <a href="#" class="backtotop active">
     <i class="flaticon-right-arrow"></i>
 </a>
