--- a/views/login.ejs
+++ b/views/login.ejs
@@ -38,7 +38,7 @@
         <div class="position-relative z-index-5">
           <div class="row">
             <div class="col-xl-7 col-xxl-8">
-              <a href="index.html" class="text-nowrap logo-img d-block px-4 py-9 w-100">
+              <a href="/" class="text-nowrap logo-img d-block px-4 py-9 w-100">
                 <img src="https://demos.adminmart.com/premium/bootstrap/modernize-bootstrap/package/dist/images/logos/dark-logo.svg" width="180" alt="">
               </a>
               <div class="d-none d-xl-flex align-items-center justify-content-center" style="height: calc(100vh - 80px);">
@@ -67,10 +67,7 @@
                     </div>
                     
                     <button type="submit"  class="btn btn-primary w-100 py-8 mb-4 rounded-2">Sign In</Button>
-                    <!-- <div class="d-flex align-items-center justify-content-center">
-                      <p class="fs-4 mb-0 fw-medium">New to Modernize?</p>
-                      <a class="text-primary fw-medium ms-2" href="authentication-register.html">Create an account</a>
-                    </div> -->
+                   
                   </form>
                 </div>
               </div>
